# hypatia

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CODING_STANDARD  CONTRIBUTING.md  CREDITS  LICENSE  README.md  TODO  _r_e_a_d_m_e_8md.html  annotated.html  appveyor.yml  asmjs.md  build_linux.sh  build_win32.bat  check.mak  check_style.sh  classes.html  config_8h.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doc_2_c_make_lists_8txt.html  doxymain_8h.html  doxymain_8h_source.html  experimental_8c.html  experimental_8h.html  experimental_8h_source.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  (+68 more)
cmake/: CMakeBuildFlags.cmake  CMakeFunctions.cmake  CPackConfig.cmake
css/: style.css
doc/: CMakeLists.txt  Doxyfile.in  Makefile  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  config_8h.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doc_2_c_make_lists_8txt.html  doxymain_8h.html  doxymain_8h_source.html  experimental_8c.html  experimental_8h.html  experimental_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_func.html  globals_func_c.html  globals_func_m.html  globals_func_q.html  globals_func_s.html  globals_func_v.html  globals_h.html  globals_m.html  globals_p.html  globals_q.html  globals_s.html  globals_u.html  globals_v.html  globals_vars.html  group____constants.html  group____reference__vectors.html  (+48 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  groups_0.js  (+10 more)
docs/: CONTRIBUTING.md  TODO  matrfaq_latest.txt
extra/: matrfaq_latest.txt
help/: CMakeLists.txt  Doxyfile.in  Makefile  footer.html
js/: scripts.js
scripts/: build_linux-debug.sh  build_linux-release.sh  build_linux.sh  build_linux_cc_mingw64.sh  build_win32.bat  check_style.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_4.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  (+19 more)
src/: CMakeLists.txt  config.h.cmake  doxymain.h  experimental.c  experimental.h  hypatia.h  hypatia.hpp  inline.h  internal.h  main.c  matrix3.c  matrix3.h  matrix4.c  matrix4.h  quaternion.c  quaternion.h  scalar.c  single-file-lib-begin.c  single-file-lib-begin.h  single-file-lib-end.c  single-file-lib-end.h  vector2.c  vector2.h  vector3.c  vector3.h  vector4.c  vector4.h
test/: CMakeLists.txt  implementation.c  main.c  test_experimental.c  test_hypatia.cmake.in  test_integration.c  test_matrix2.c  test_matrix3.c  test_matrix4.c  test_matrix6.c  test_quaternion.c  test_utility.c  test_vector2.c  test_vector3.c  test_vector4.c  unittest.h
test_macros/: main.c  test_matrix4.c  test_vector2.c  unittest.h
