cmake_minimum_required(VERSION 3.0)

PROJECT(hypatia
	LANGUAGES C
	VERSION 1.0.0.0)

enable_testing()

INCLUDE(${CMAKE_SOURCE_DIR}/CPackConfig.cmake)
INCLUDE(CPack)

ADD_SUBDIRECTORY("src")

OPTION(HYPATIA_BUILD_TESTS "Build unit tests" ON)
IF(HYPATIA_BUILD_TESTS)
	ADD_SUBDIRECTORY("test")
ENDIF(HYPATIA_BUILD_TESTS)

OPTION(HYPATIA_BUILD_DOCS "Build help documents" ON)
IF(HYPATIA_BUILD_DOCS)
	ADD_SUBDIRECTORY("doc")
ENDIF(HYPATIA_BUILD_DOCS)
