cmake_minimum_required(VERSION 3.0)

PROJECT(hypatia
	LANGUAGES C
	VERSION 1.0.0.0)

enable_testing()

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/CPackConfig.cmake)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/hypatia.spec.in" "${CMAKE_CURRENT_BINARY_DIR}/hypatia.spec" @ONLY IMMEDIATE)
SET(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_BINARY_DIR}/hypatia.spec")
SET(CPACK_PACKAGE_RELEASE 2)
SET(CPACK_RPM_PACKAGE_SOURCES ON)
INCLUDE(CPack)

ADD_SUBDIRECTORY("src")

OPTION(HYPATIA_BUILD_TESTS "Build unit tests" ON)
IF(HYPATIA_BUILD_TESTS)
	ADD_SUBDIRECTORY("test")
ENDIF(HYPATIA_BUILD_TESTS)

OPTION(HYPATIA_BUILD_DOCS "Build help documents" ON)
IF(HYPATIA_BUILD_DOCS)
	ADD_SUBDIRECTORY("doc")
ENDIF(HYPATIA_BUILD_DOCS)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION share/doc/libhypatia/)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION share/licenses/libhypatia/)
