cmake_minimum_required(VERSION 3.0)

PROJECT(hypatia
	LANGUAGES C)

enable_testing()

OPTION(HYPATIA_BUILD_TESTS "Build unit tests" ON)
IF(HYPATIA_BUILD_TESTS)
	ADD_SUBDIRECTORY("test")
ENDIF(HYPATIA_BUILD_TESTS)

OPTION(HYPATIA_BUILD_DOCS "Build help documents" ON)
IF(HYPATIA_BUILD_DOCS)
	ADD_SUBDIRECTORY("help")
ENDIF(HYPATIA_BUILD_DOCS)
